Add style to CSS

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <href="style.css" rel="stylesheet" type="text/css"/> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-   <div class="Top-container">
+   <div class="header">
     <h3>Header Logo</h3>
     <a href="//lazywmarie.com/">Moms Blog</a> 
     <a href="https://www.instagram.com/thelazyw/">Moms instagram</a> 
     <a href="https://kfor.com/contests/remarkable-women/remarkable-women-finalist-meet-marie-wreath/">News Article</a>
-
+   </div> 
+   <div class="Top-container">
     <h1> This Website is Awesome</h1>
     <p> This is not hard. I have totally got this. What's the worst that could happen?</p>
     <button> Sign Up</button>
