Add style to CSS
Changing the text made it readable on the dark background and resizing the buttons allowed the text to fit but I need to do some research to see if I;m using width poorly

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+<div class="all">
    <div class="header">
     <h3>Header Logo</h3>
     <a href="//lazywmarie.com/">Moms Blog</a> 
@@ -45,6 +46,6 @@
     <div class="end">
     <div class="Footer"> this will go at the very bottom of the page </div>
    </div>
-
+</div>
 </body>
 </html>
