Style the buttons

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="child">
         <h3>Call to action! It's time!</h3>
         <p> Here is text that will go in the child. </p>
-        <button> Sign Up</button> 
+        <button class="blue"> Sign Up</button> 
     </div>
    </div>
     <div class="end">
