--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <p class="child-txt"> Marie exemplifies these and many other values. She enriches her family and community with her joy and generosity. </p>
        </div>
        <div class="bb-box">
-        <button class="blue"> Be Kind </button> 
+        <button class="blue" id="blue"> Be Kind </button> 
        </div>  
     </div>
    </div>
@@ -63,5 +63,6 @@
     <div class="Footer"> this will go at the very bottom of the page </div>
    </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
